fixed bug overflow

--- a/style.css
+++ b/style.css
@@ -4,16 +4,37 @@
         padding: 0px;
     }
 
-
+    /* scrollbar */
+    /* width */
+::-webkit-scrollbar {
+    width: 3px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px rgb(97, 23, 23); 
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(240, 240, 240); 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #b30000; 
+  }
 
     nav{
-        width: 100%;
+       
     }
     .nav-box{
         margin: 0px;
         background-color: rgb(218, 18, 35);
         height: 20px;
-        width: 100%;
+       
         padding: 25px;
         color: rgb(255, 255, 255);
     }
@@ -100,9 +121,7 @@
 
 
     .about-head{
-        position: absolute;
-        top: -30px;
-        left: 570px;
+       
         text-align: center;
         font-family: 'Unbounded', cursive;
         color: rgb(255, 255, 255);
@@ -110,6 +129,10 @@
         font-size: 30px;
         color: white;
         border-radius: 10px;
+    }
+    .about-head h2{
+      
+       margin-left: 70px;
     }
 
 
@@ -119,10 +142,7 @@
         box-shadow: 0px 0px 10px rgb(255, 0, 0);
         padding: 29px;
         border-radius:20px;
-
-        margin-top: 140px;
-        margin-left: 40px;
-        margin-right: 40px;
+        margin: 40px;
         border: 6px solid rgb(255, 0, 0);
     }
     .about-profile{
@@ -188,7 +208,7 @@
     background: #fd1900;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to left, #fafafa, #ff240c);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #ff0000, #a65349); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    width: 100%;
+
         padding: 50px;
 
     }
@@ -239,7 +259,7 @@
     }
 
     .project-descr{
-        background-color: rgb(37, 36, 36);
+        background-color: rgb(211, 0, 0);
         font-family: 'Poppins', sans-serif;
         height: 50%;
         padding: 30px;
@@ -252,7 +272,7 @@
         color: rgb(255, 255, 255);
         text-decoration: none;
         background-color: rgb(0, 0, 0);
-        height: fit-content;
+        
         padding: 13px;
 
     }
@@ -270,6 +290,10 @@
     .project-features ul{
         font-family: 'Poppins', sans-serif;
         color: white;
+    }
+
+    .features-list li{
+        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
     .project-content{
@@ -291,6 +315,42 @@
         background-color: rgb(246, 0, 0);
     }
 
+    .footer{
+        background-color: rgb(0, 0, 0);
+        padding: 5px;
+    }
+    .footer .footer-txt{
+        color: rgb(255, 255, 255);
+        font-family: 'Jost', sans-serif;
+        text-align: center;
+    }
+
+    .icon-heart{
+        color: #f80000;
+    }
+
+    /* animation */
+    .line-1{
+        width: 10em;
+        border-right: 2px solid rgba(255,255,255,.75);
+        white-space: nowrap;
+        overflow: hidden;
+        /* transform: translateY(-50%);     */
+    }
+    
+    /* Animation */
+    .anim-typewriter{
+      animation: typewriter 4s steps(44) 1s 1 normal both,
+                 blinkTextCursor 500ms steps(44) infinite normal;
+    }
+    @keyframes typewriter{
+      from{width: 0;}
+      to{width: 10em;}
+    }
+    @keyframes blinkTextCursor{
+      from{border-right-color: rgba(218, 218, 218, 0.75);}
+      to{border-right-color: transparent;}
+    }
 
     /* responisive for phone */
 
@@ -300,15 +360,12 @@
             flex-wrap: wrap;
         }
         .about-profile-box{
-            margin-left:0px;
-            height: 250px;
-            width: 240px;
+            margin: auto;
+            width: auto;
         }
         
-        .about-profile{
-    
-            width: 250px;
-            height: 250px;
+        .project-head{
+            font-size: 24px;
         }
 
         .skill-tag{
